# Disease-scoring-system

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf
api/: Dockerfile  create_db.py  main.py  requirements.txt  start-api.sh  worker.py
api/patient_catalog/: database.py  endpoints.py  models.py
api/scoring_system/: endpoints.py  logger.py  models.py
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  example.env  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Analizator.js  App.tsx  Components.js  Homepage.js  ScoringSystem.js  index.js  styles.css
frontend/src/components/: Components.tsx  Navbar.tsx
frontend/src/lib/: api.ts  interfaces.ts
frontend/src/lib/classes/: api.ts  codes.ts  data.ts  disease.ts  httpError.ts  patient.ts  result.ts
frontend/src/lib/components/: ClassifyForm.tsx  Codes.tsx  DiseaseDropdown.tsx  Filtering.tsx  Footer.tsx  Heatmap.tsx  HeatmapRow.tsx  Label.tsx  LinkButton.tsx  Navbar.tsx  Pagination.tsx  PatientCodes.tsx
frontend/src/lib/errors/: httpError.ts
frontend/src/lib/pages/: Catalog.tsx  Home.tsx  Layout.tsx  PatientDetailPage.tsx  ResultPage.tsx  ScoringSystem.tsx
frontend/src/pages/: Catalog.tsx  Layout.tsx  ScoringSystem.tsx
worker/: Dockerfile  models.py  tasks.py  worker.py
